--- a/products/nhsm.html
+++ b/products/nhsm.html
@@ -27,76 +27,49 @@
 
 <body>
 
-	<div class="top-bar-area">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-4">
-					<div class="header-logo">
-						<a href="../index.html"><img src="../assets/images/logo1.png" alt="logo"></a>
-					</div>
+<div class="top-bar-area header-area" id="sticky-header">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-md-2">
+				<div class="header-logo">
+					<a href="../index.html"><img class="w-100" src="../assets/images/logo1.png" alt="logo"></a>
 				</div>
-				<div class="col-md-8">
-					<div class="top-bar-info text-end">
-						<ul class="d-inline-flex align-items-center">
-							<li>
-								<div class="d-inline-flex">
-									<i class="fs-4 bi bi-telephone-fill align-content-center me-4"></i>
-									<p class="mb-0 text-light">
-										Contact Us
-										<span class="d-block fw-bold text-dark">+603-8062 5093</span>
-									</p>
-								</div>
-							</li>
-							<li>
-								<div class="header-search-button search-box-outer">
-									<a href="#"><i class="bi bi-search"></i></a>
-								</div>
-							</li>
-						</ul>
-					</div>
+			</div>
+			<div class="d-flex justify-content-end col-md-8">
+				<div class="header-menu">
+					<ul class="nav_scroll">
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../about.html">About Us</a></li>
+						<li><a href="../products.html">Products</a></li>
+						<li><a href="../gallery.html">Gallery</a></li>
+						<li><a href="../careers.html">Careers</a></li>
+						<li><a href="../contact.html">Contacts Us</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="header-button">
+					<a href="../contact.html#contact_form">Get a Quote</a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
-	<div class="header-area" id="sticky-header">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-9">
-					<div class="header-menu">
-						<ul class="nav_scroll">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../about.html">Corporate Information</a></li>
-							<li><a href="../products.html">Products</a></li>
-							<li><a href="../gallery.html">Gallery</a></li>
-							<li><a href="#">Careers</a></li>
-							<li><a href="../contact.html">Contacts</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="header-button">
-						<a href="../contact.html#contact_form">Get a Quote</a>
-					</div>
-				</div>
-			</div>
-		</div>
+<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
+	<div class="mobile-menu">
+		<nav class="header-menu">
+			<ul class="nav_scroll">
+				<li><a href="../index.html">Home</a></li>
+				<li><a href="../about.html">About Us</a></li>
+				<li><a href="../products.html">Products</a></li>
+				<li><a href="../gallery.html">Gallery</a></li>
+				<li><a href="../careers.html">Careers</a></li>
+				<li><a href="../contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
 	</div>
-
-	<div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
-		<div class="mobile-menu">
-			<nav class="header-menu">
-				<ul class="nav_scroll">
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../about.html">Corporate Information</a></li>
-					<li><a href="../products.html">Products</a></li>
-					<li><a href="../gallery.html">Gallery</a></li>
-					<li><a href="#">Careers</a></li>
-					<li><a href="../contact.html">Contacts</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
+</div>
 
 
 <div class="breadcumb-area d-flex align-items-center">
@@ -132,8 +105,8 @@
 								</div>
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p><strong>Neutrone®'s high shear mixer, NHSM Series designs</strong>  offer excellent flexibility and performance for a variety of industrial mixing processes. These mixers can be configured for permanent mounting directly to the mix tank or suspended over the vessel using either portable or fixed lifting mechanisms. This flexibility allows you to maximize efficiency by using the same mixer in multiple vessels or different areas of the plant.</p>
-										<p class="pb_30"><strong>Key Features and Benefits of the NHSM Series Mixers:</strong></p>
+										<p><strong>Neutrone® High Shear Mixers (NHSM Series) </strong> designs offer excellent flexibility and performance for a variety of industrial mixing processes. These mixers can be configured for permanent mounting directly to the mix tank or suspended over the vessel using either portable or fixed lifting mechanisms. This flexibility allows you to maximize efficiency by using the same mixer in multiple vessels or different areas of the plant.</p>
+										<p class="pb_30"><strong>Key Features & Benefits</strong></p>
 									</div>
 								</div>
 							</div>
@@ -145,7 +118,7 @@
 										<h4>Flexible Mounting Options</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Rotor-stator mixers offer flexible installation options, including permanent mounting for stable, fixed operations and portable lifting mechanisms for mobility across vessels and plant areas. Adjustable agitator positioning ensures precise mixing to suit various materials, optimizing efficiency and versatility in diverse applications.</p>
+										<p>Offer flexible installation options, including permanent mounting for stable, fixed operations and portable lifting mechanisms for mobility across vessels and plant areas. Adjustable agitator positioning ensures precise mixing to suit various materials, optimizing efficiency and versatility in diverse applications.</p>
 									</div>
 								</div>
 							</div>
@@ -157,7 +130,7 @@
 										<h4>Rotor/Stator Design</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>Rotor-stator mixers feature a four-blade rotor within a close-tolerance stator, generating high shear forces for intense mixing. The rotor's high-speed motion drives materials through the stator, creating shear and turbulence. This design ensures efficient particle size reduction, emulsification, and effective mixing for demanding applications.</p>
+										<p>Feature a four-blade rotor within a close-tolerance stator, generating high shear forces for intense mixing. The rotor's high-speed motion drives materials through the stator, creating shear and turbulence. This design ensures efficient particle size reduction, emulsification, and effective mixing for demanding applications.</p>
 									</div>
 								</div>								
 							</div>
@@ -169,7 +142,7 @@
 										<h4>Versatile Mixing Applications</h4>
 									</div>
 									<div class="products-detials-desc">
-										<p>High shear rotor-stator mixers are versatile tools for particle size reduction, homogenization, and emulsification. They ensure uniformity by breaking down particles, solids, and immiscible liquids like oil and water into stable, consistent mixtures. Widely used in industries like food, pharmaceuticals, and cosmetics, they enhance efficiency and product quality.</p>
+										<p>Versatile tools for particle size reduction, homogenization, and emulsification. They ensure uniformity by breaking down particles, solids, and immiscible liquids like oil and water into stable, consistent mixtures. Widely used in industries like food, pharmaceuticals, and cosmetics, they enhance efficiency and product quality.</p>
 									</div>
 								</div>	
 							</div>
@@ -191,7 +164,6 @@
 							<div class="product-details-content">
 								<div class="product-details-content">
 									<div class="product-details-desc">
-										<p class="pb_30"><strong>Benefits of Neutrone® High Shear Mixers, NHSM Series:</strong></p>
 										<div class="product-details-desc">
 											<ul>
 												<li><strong>Energy Efficiency: </strong> The high-energy rotor/stator action achieves quick and effective mixing, which often results in energy savings when compared to traditional homogenizers.</li>
@@ -200,7 +172,7 @@
 												<li><strong>Fast Processing: </strong> The high shear rate ensures that mixing tasks like particle size reduction, emulsification, and homogenization can be completed quickly and consistently, improving throughput and product quality.</li>
 												<li><strong>Improved Product Consistency: </strong> By achieving rapid and uniform mixing, these mixers ensure that the final product has consistent texture, stability, and uniformity, which is essential for high-quality output in industries like pharmaceuticals, cosmetics, and food production.</li>
 											</ul>
-											<p>Neutrone® N5SE Series Side Entry Mixers are a reliable, safe, and efficient solution for industrial mixing applications, particularly in large tank installations. Their gear-driven design, space-saving configuration, and safety features make them an ideal choice for industries such as chemical processing, wastewater treatment, food production, and oil refining. Whether you need to handle high-viscosity fluids, large-scale blending, or operate in confined spaces, the Neutrone® N5SE Series offers a robust and cost-effective alternative to traditional top-entry mixing systems.</p>
+											<p><strong>Neutrone® High Shear Mixers (NHSM Series)</strong> provide an efficient, flexible, and powerful solution for a wide range of industrial mixing applications. Whether mounted permanently or suspended with a portable lifting mechanism, these mixers excel in homogenization, particle size reduction, emulsification, and solids size reduction. Their high energy performance, combined with adjustable positioning and the ability to work with various materials, makes them an excellent choice for industries requiring high-performance mixing with consistent results.</p>
 										</div>
 									</div>
 								</div>
